--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="password">password</string>
     <string name="log_in">Log in</string>
     <string name="sign_up">Sign up</string>
+    <string name="please_wait">please wait</string>
 </resources>
